[workspace]
resolver = "2"
members = [
    "rlune", 
    "rlune-cli",
    "rlune-macros",
    "rlune-core",
    "./contrib/rlune-contrib-auth",
    # "./contrib/rlune-contrib-tracing",
    "./example/blog",
]

[workspace.dependencies]
axum = { version = "~0.8", default-features = false }
rorm = { version = "*", git = "https://github.com/rorm-orm/rorm", tag = "v0.7.0-pre-3", default-features = false }
rorm-macro-impl = { version = "*", git = "https://github.com/rorm-orm/rorm", tag = "v0.7.0-pre-3" }