[workspace]
resolver = "2"
members = [
    "rlune", 
    "rlune-cli",
    "rlune-macros",
    "rlune-core",
    "./contrib/rlune-contrib-auth",
    # "./contrib/rlune-contrib-tracing",
    "./example/blog",
]

[workspace.dependencies]
axum = { version = "~0.8", default-features = false }
rorm = { version = "~0.7", default-features = false }
rorm-macro-impl = { version = "~0.9" }