[package]
name = "rlune-core"
version = "0.1.0"
edition = "2021"
authors = ["Elijah Samson <git@obaraelijah.dev>"]
license = "MPL-2.0"
description = "Core concepts for rlune like trait definitions"
 
[dependencies]
# Webserver
axum = { version = "~0.7", default-features = false }
bytes = { version = "~1" }
mime = { version = "~0.3" }
serde = { version = "~1" }
schemars = { version = "~0.8" }
tower = { version = "~0.4" }
regex = { version = "~1" }