[package]
name = "rlune"
version = "0.1.0"
edition = "2021"
authors = ["Elijah Samson <git@obara.dev>"]
license = "MPL-2.0"
description = "Core-component for the rlune web-framework"

[dependencies]
# Webserver
axum = { workspace = true, default-features = false, features = ["tokio", "http1"] }

# Core
rlune-core = { version = "~0.1", path = "../rlune-core" }

# Contrib modules
# rlune-contrib-tracing = { version = "~0.1", path = "../contrib/rlune-contrib-tracing", optional = true }
rlune-contrib-auth = { version = "~0.1", path = "../contrib/rlune-contrib-auth", optional = true }

# Error handling
thiserror = { version = "~2" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["net"] }

# Tracing
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }

swaggapi = { version = "0.2.2", path = "../swaggapi" }
rlune-macros = { version = "0.2.0", path = "../rlune-macros" }
openapiv3 = { version = "~2", optional = true }
serde_json = { version = "~1", optional = true }

[features]
contrib = [
    # "dep:rlune-contrib-tracing",
    "dep:rlune-contrib-auth",
]

openapi = [
    "dep:openapiv3",
    "serde_json"
]