[package]
name = "rlune-contrib-tracing"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Elijah Samson <git@obaraelijah.dev>"]
description = "Tracing feature for rlune"

[dependencies]
# Rlune core
rlune-core = { version = "~0.1", path = "../../rlune-core" }

# tower
tower-http = { version = "~0.6", features = ["trace"] }

# Tracing
tracing = { version = "~0.1" }