[package]
name = "blog"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Elijah Samson <git@obaraelijah.dev>"]
description = "A blog created with rlune"
 
[dependencies]
# Framework
rlune = { path = "../../rlune", version = "*", features = ["contrib"] }
 
# async runtime
tokio = { version = ">=1.23.1", features = ["full"] }